sass/main.scss
/* ... */
.share {
  margin-top: 0.5em;
}
.social img {
  width: 1.5em;
  height: auto;
  margin-right: 0.5em;
}
.social {
  background-color: $primary;
  display: inline-block;
  padding: 10px 2px 5px 10px;
  margin-right: 2px;
}
.social a:hover img {
  -webkit-transition: all 1s ease; /* Safari and Chrome */
  -moz-transition: all 1s ease; /* Firefox */
  -ms-transition: all 1s ease; /* IE 9 */
  -o-transition: all 1s ease; /* Opera */
  transition: all 1s ease;
  opacity: .7;
}
.back-button a {
    display: inline-block;
    color: #ffffff;
    text-decoration: none;
    font-size: 1.2em;
    padding: 5px 10px;
    line-height: 1.5em;
}
.back-button a i {
    position: relative;
    top: 5px;
}
.link-bar i.material-icons {
  color: #ffffff;
}
.peek i.material-icons{
  font-size: 0.77em;
  margin-left: 0.1em;
  padding-right: .5em;
}
/* ===== LANDING PAGE STYLES ===== */
.landingPageBody, .departmentPage, .curatorProfile {
  display: inline-block;
}
.shortcutLinks {
  width: 100%;
  text-align: left;
  margin-bottom: 20px;
}
.shortcutLinks a {
  color: rgb(35,35,35);
  transition: ease all 0.8s;
}

.departmentList.mdl-grid, .welcome.mdl-grid {
  margin-bottom:2em;
}
.departmentList, .welcome {
  display: inline-block;
}
.departmentList h2, .welcome h2 {
  font-family: $MiaGroteskBold, sans-serif;
  font-size:2em;
  padding-left:8px;
}
.departmentLink h2 {
  font-size: 1em;
  font-family: $MiaGroteskBold, sans-serif;
  border-top: 3px solid rgba(35,35,35,1);
  padding: 7px 0;
  margin: 7px 0;
  line-height: 1em;
  color: rgb(35,35,35);
}
.departmentLink {
  float:left;
  display: inline-block;
  vertical-align: bottom;
  text-align: left;
}
.departmentListItem {
  width: 100%;
  height: 150px;
}
.departmentListItem.africa {
  background:url("https://api.artsmia.org/images/4866/400/medium.jpg") no-repeat center center;
  background-size: cover;
}
.departmentListItem.cssaa {
  background:url("https://api.artsmia.org/images/12134/400/medium.jpg") no-repeat center center;
  background-size: cover;
}
.departmentListItem.contemporary {
  background:url("https://api.artsmia.org/images/1721/400/medium.jpg") no-repeat center center;
  background-size: cover;
}
.departmentListItem.dats {
  background:url("https://api.artsmia.org/images/8024/400/medium.jpg") no-repeat center center;
  background-size: cover;
}
.departmentListItem.jka {
  background:url("https://api.artsmia.org/images/7505/400/medium.jpg") no-repeat center center;
  background-size: cover;
}
.departmentListItem.paintings {
  background:url("https://api.artsmia.org/images/1348/400/medium.jpg") no-repeat center center;
  background-size: cover;
}
.departmentListItem.photography {
  background:url("https://api.artsmia.org/images/89324/400/medium.jpg") no-repeat center center;
  background-size: cover;
}
.departmentListItem.prints {
  background:url("https://api.artsmia.org/images/9194/400/medium.jpg") no-repeat center center;
  background-size: cover;
}
a.departmentLink h2{
  -webkit-transition: all 150ms linear;
  -moz-transition: all 150ms linear;
  -ms-transition: all 150ms linear;
  -o-transition: all 150ms linear;
  transition: all 150ms linear;
}

/* ===== DEPARTMENT PAGES ===== */
.departmentPage h2 {
  background: transparent;
  font-size: 1.75em;
  width: 100%;
  text-align: left;
  padding: 0 0 10px 21px;
  margin: 0;
  margin-top:0.7em;
  line-height: 1em;
}
.departmentPage h2 span.d-visit{
    display:none;
}
.departmentContent, .departmentResources {
  padding: 0 5px;
}
.departmentContent p {
  line-height:1.4em;
  padding-left:10px;
}

.departmentResources h3, .curatorProfile.pageText .curatorContent h2 {
  border-top: 3px solid rgb(35,35,35);
  font-size: 1.2em;
  width: 100%;
  font-family: $MiaGroteskRegular;
  line-height: 1em;
  padding: 7px 0;
}

.departmentResources h3:first-child {
  margin-top: 0;
}
.departmentResources ul{
    margin-bottom:2em;
}
.departmentPage h2 a{
  color: rgb(35,35,35);
}

.departmentContent p{
  padding: 0 0 20px 0;
}
.departmentResources h3{
  padding-bottom: 15px;
}
.departmentResources li{
  padding-bottom: 10px;
}
.curatorBio, .affinity, .resources {
  display: inline-block;
  width: 100%;
  height: auto;
  margin-bottom: 20px;
}
.curatorPic, .affinityImage {
  width: 30%;
  float: left;
  display: inline-block;
  margin-right: 20px;

  img{
    width: 100%;
  }
}
.curator-intro {
  width: 64%;
  display: inline-block;
}
.affinity-intro  p{
  margin-bottom: 15px;
}
.curatorBio h4 {
  font-size: 1.1em;
}
.curatorBio h5 {
  font-family: $MiaGroteskRegular;
  font-size: .9em;
  padding-bottom: 1em;
}
.departmentBlurb .button {
  padding: 5px 15px;
  background: $primary;
  color: white;
}
.quilt-wrap .lazy-load {
  display: inline-block;
  overflow: hidden;
}
/* ===== CURATOR PROFILES ===== */
#curators a {
  color: $primary;
}
#curators a:hover {
  opacity:.7;
}
.curatorProfile.pageText {
  margin-top: 4em;
}
.curatorProfile.pageText h2 {
  background: transparent;
  font-size: 1.75em;
  width: 100%;
  text-align: left;
  margin: 0;
  margin-top:0.7em;
  line-height: 1em;
  border:none;
}
.curatorContent {
  margin-top: 2em;
}
.curatorContent p {
  line-height:1.4em;
  padding-left:10px;
  padding: 0 0 20px 0;
}

/* ===== artwork.js STYLES ===== */

.artwork #map {
  position: relative;
  left: 0;
  width: 65%;
  height: calc(100vh - 4em);
  z-index: 1000;
  background-color: #ddd;
}
.artwork.smallviewport #map {
  top: 0;
  z-index: 2;
  height: calc(100vh - 10em);
  overflow: hidden;
}
.artwork .sticky #map {
  width: 100%;
  height: 100%;
}
.artwork #map .imageStatus {
  position: absolute;
  bottom: 3em;
  width: 100%;
  text-align: center;
  padding: 0 20%;
}

.artwork .info {
  position: absolute;
  width: 35%;
  background: #fff;
  min-height: calc(100% - 4em);
  padding: 3.3em 2em;
  right: 0;
  overflow-y:scroll;
  min-height: 100vh;
}
.artwork .info p{
  width:100%;
}
/* ... */

